<resources>
    <string name="app_name">KotlinUberRider</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_welcome_to_reg">Let\'s start with creating your account</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="title_activity_rider_home">RiderHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exit">Sign out</string>
    <string name="title_activity_maps">Map</string>

    <string name="permission_required">Permission Location Required</string>
    <string name="drivers_not_found">Drivers not found</string>
    <string name="key_not_found">Key not found</string>
    <string name="welcome">Good Afternoon</string>
    <string name="choose_a_saved_place">choose a saved place</string>
    <string name="city_name_not_found">City name not found</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="pay_by_cash">Pay by Cash</string>
    <string name="confirm_uber">Confirm Uber</string>
    <string name="confirm_pickup_spot">Confirm pickup spot</string>
    <string name="address">Address</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="meet_driver_here">Meet driver here</string>
    <string name="finding_your_driver">Finding your driver</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_req_driver_failed">Send request driver failed</string>
    <string name="no_driver_accept">No driver accept</string>
    <string name="trips_not_found">Cannot found trip with key</string>
    <string name="uber_x">Trueno AE86</string>
    <string name="car_number">13954</string>
    <string name="acsii_code">■</string>
    <string name="language_example">English</string>
    <string name="pickup_hint">Any pickup notes?</string>
    <string name="min_per_away">MIN\nAWAY</string>
    <string name="distance">Distance</string>
    <string name="total_fee">Total fee</string>
    <string name="trip_detail">Trip Detail</string>
    <string name="receipt">Receipt</string>
    <string name="uber_x_receipt">Uber X receipt</string>
    <string name="base_fare">Base Fare</string>
    <string name="duration">Duration</string>
</resources>