<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_driver_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    tools:visibility="visible">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="80dp"
                    android:src="@drawable/car_display"/>
                
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circular_iv_driver"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_account_circle"/>

            </FrameLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/uber_x"
                    android:textColor="#737373"
                    android:textSize="16sp"
                    android:fontFamily="@font/uber_move" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_car_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/car_number"
                    android:textColor="#737373"
                    android:textSize="20sp"
                    android:fontFamily="@font/uber_move" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:fontFamily="@font/uber_move"
                    tools:text="Fujiwara Takumi"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/acsii_code"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:fontFamily="@font/uber_move"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_driver_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@drawable/ic_baseline_star_rate"
                    android:gravity="center_vertical"
                    android:text="5.0"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:fontFamily="@font/uber_move"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/acsii_code"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:fontFamily="@font/uber_move"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_foreign_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/language_example"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:fontFamily="@font/uber_move"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="12">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_call_driver"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_phone"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_note_for_driver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:inputType="textMultiLine"
                android:hint="@string/pickup_hint"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/iv_call_driver"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_send_note"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_wb_sunny"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>